--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -209,7 +209,7 @@
         <hr>
         <footer class="footer">
             <p>
-                <a href="/api/friends">API Friends List</a> | <a href="https://github.com/a-ashbeck/FriendFinder">GitHub Repo</a>
+                <a href="/api/friends">API Friends List</a> | <a href="https://github.com/luizpa/FriendFinder">GitHub Repo</a>
             </p>
         </footer>
     </div>
