--- a/app/public/home.html
+++ b/app/public/home.html
@@ -29,7 +29,7 @@
         <!-- Home page footer -->
         <footer class="footer">
             <p>
-                <a href="/api/friends">API Friends List</a> | <a href="https://github.com/a-ashbeck/FriendFinder">GitHub Repo</a>
+                <a href="/api/friends">API Friends List</a> | <a href="https://github.com/luizpa/FriendFinder">GitHub Repo</a>
             </p>
         </footer>
     </div>
